k8s/service.yml

apiVersion: v1
kind: Service
metadata:
  name: website-yups
  namespace: websites
spec:
  selector:
    app: website-yups
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
